fix overflow on iphone

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 html{
     font-size: 16px;
     color: #2D2D2D;
+    overflow: hidden;
 }
 
 * {
@@ -13,6 +14,7 @@ html{
 
 body {
     font-family: 'Nunito', sans-serif;
+    overflow: auto;
 }
 
 
